# gauche-xlib

./: .gitignore  COPYRIGHT  Makefile  Makefile.in  auto  configure.in  dpms.stub  replace-gauche-string  test.scm  todo  types.genstub  xlib-lib.c  xlib-lib.h  xlib.scm  xlib.stub  xlib_head.c  xlib_tail.c
debian/: changelog  control  control.in  rules
xlib/: fork.scm  handy.scm  xkb.scm
xlib/xkb/: cmap.scm  find.scm  fork.scm  geometry.scm  server.scm
